--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.7.2
-  flutter_bloc: ^9.1.1
-  get_it: ^8.1.0
-  equatable: ^2.0.7
-  dartz: ^0.10.1
-  dio: ^5.8.0+1
-  flutter_riverpod: ^2.6.1
+  http: ^1.4.0
+  
+  # flutter_bloc: ^9.1.1
+  # get_it: ^8.1.0
+  # equatable: ^2.0.7
+  # dartz: ^0.10.1
+  # dio: ^5.8.0+1
+  # flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+  # assets:
+  #   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
